deployment.yaml
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   labels:
#     app: pokeapi
#   name: pokeapi
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: pokeapi
#   template:
#     metadata:
#       labels:
#         app: pokeapi
#     spec:
#       containers:
#       - image: sahat850/pokeapi:latest
#         name: pokeapi
#         ports:
#         - containerPort: 8080
#         resources:
#           limits:
#             cpu: "250m"
#             memory: "250Mi"
#           requests:
#             cpu: "100m"
#             memory: "128Mi"
#       restartPolicy: Always

# ---

# apiVersion: v1
# kind: Service
# metadata:
#   labels:
#     app: pokeapi
#   name: pokeapi
# spec:
#   ports:
#   - name: "pokeapi"
#     port: 80
#     targetPort: 8080
#   selector:
#     app: pokeapi
#   type: LoadBalancer

# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   labels:
#     app: pokeapi
#   name: pokeapi
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: pokeapi
#   template:
#     metadata:
#       labels:
#         app: pokeapi
#     spec:
#       containers:
#       - image: sahat850/pokeapi:latest
#         name: pokeapi
#         ports:
#         - containerPort: 8080
#         resources:
#           limits:
#             cpu: "250m"
#             memory: "250Mi"
#           requests:
#             cpu: "100m"
#             memory: "128Mi"
#       restartPolicy: Always

# ---

# apiVersion: v1
# kind: Service
# metadata:
#   labels:
#     app: pokeapi
#   name: pokeapi
# spec:
#   ports:
#   - name: "pokeapi"
#     port: 80
#     targetPort: 8080
#   selector:
#     app: pokeapi
#   type: LoadBalancer

# ---

# apiVersion: v1
# kind: Secret
# metadata:
#   name: my-tls-secret-2
# type: kubernetes.io/tls
# data:
#   tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUUrRENDQStDZ0F3SUJBZ0lTQklUcU9aa3p6cXJDc0FYdUZyVUROdXc4TUEwR0NTcUdTSWIzRFFFQkN3VUEKTURJeEN6QUpCZ05WQkFZVEFsVlRNUll3RkFZRFZRUUtFdzFNWlhRbmN5QkZibU55ZVhCME1Rc3dDUVlEVlFRRApFd0pTTXpBZUZ3MHlOREF5TWpNd01UQTFNekphRncweU5EQTFNak13TVRBMU16RmFNQmt4RnpBVkJnTlZCQU1NCkRpb3VibVYwYVdSdUxtMTVMbWxrTUlJQklqQU5CZ2txaGtpRzl3MEJBUUVGQUFPQ0FROEFNSUlCQ2dLQ0FRRUEKeFFPb2xidjkrNi9Xb09PazFHUVk5ZU1HZUxlUjdBaTVJVlIrcVVPU2tSU1VZUk56N2k2S3VnWnpGU3k0S3ZNbQpZTVBXbGFEeTlNbnh [...]
#   tls.key: LS0tLS1CRUdJTiBSU0EgUFJJVkFURSBLRVktLS0tLQpNSUlFcEFJQkFBS0NBUUVBeFFPb2xidjkrNi9Xb09PazFHUVk5ZU1HZUxlUjdBaTVJVlIrcVVPU2tSU1VZUk56CjdpNkt1Z1p6RlN5NEt2TW1ZTVBXbGFEeTlNbnhtUkdrUGhTblN3RytQM3FNUU1UbStkR0t3Vi9KazBZSE5yenEKd1Q4ZFRQZFM0RDljaFFKUHJ4SXZySDJ4UjNOeS93em0rcWtRb2d0ZkI2WU05bXc0eHdjRFMyaHNSK1FMTjZ6eApwMXlnQlArZk5ROTUwL1J4Qk5pc1oyRUUvYU55WUE0eFBGUEdDWGpEZU8xMWlHV3RDWFh4Nm5BZVpjWlplMU84CnB6T1NsaG91OGhCRFlOSE5QODZrUEVMMmtCekpXaVpFaXhCM0ZvenJqMXFVUXZFS2lvMXJHVi9iaDNTTTU5TGEKL1hMRmdLZXp [...]

# ---

# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: pokeapi-ingress
#   annotations:
#     kubernetes.io/ingress.class: "nginx"
#     nginx.ingress.kubernetes.io/ssl-redirect: "true"
# spec:
#   tls:
#   - hosts:
#     - netidn.my.id  # Your domain name
#     secretName: my-tls-secret-2  # Your secret name
#   rules:
#   - host: netidn.my.id
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: pokeapi
#             port:
#               number: 80

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pokeapi
  name: pokeapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pokeapi
  template:
    metadata:
      labels:
        app: pokeapi
    spec:
      containers:
      - image: sahat850/pokeapi:latest
        name: pokeapi
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "250m"
            memory: "250Mi"
          requests:
            cpu: "100m"
            memory: "128Mi"
      - name: zabbix-agent
        image: zabbix/zabbix-agent:latest
        ports:
        - containerPort: 10051
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: pokeapi
  name: pokeapi
spec:
  ports:
  - name: "http"
    port: 80
    targetPort: 8080
  selector:
    app: pokeapi
  type: LoadBalancer
