deployment-example.yaml
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   labels:
#     app: pokeapi
#   name: pokeapi
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: pokeapi
#   template:
#     metadata:
#       labels:
#         app: pokeapi
#     spec:
#       containers:
#       - image: sahat850/pokeapi:latest
#         name: pokeapi
#         ports:
#         - containerPort: 8080
#         resources:
#           limits:
#             cpu: "250m"
#             memory: "250Mi"
#           requests:
#             cpu: "100m"
#             memory: "128Mi"
#       restartPolicy: Always

# ---

# apiVersion: v1
# kind: Service
# metadata:
#   labels:
#     app: pokeapi
#   name: pokeapi
# spec:
#   ports:
#   - name: "pokeapi"
#     port: 80
#     targetPort: 8080
#   selector:
#     app: pokeapi
#   type: LoadBalancer


apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pokeapi
  name: pokeapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pokeapi
  template:
    metadata:
      labels:
        app: pokeapi
    spec:
      containers:
      - image: sahat850/pokeapi:latest
        name: pokeapi
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: "250m"
            memory: "250Mi"
          requests:
            cpu: "100m"
            memory: "128Mi"
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: pokeapi
  name: pokeapi
spec:
  ports:
  - name: "pokeapi"
    port: 80
    targetPort: 8080
  selector:
    app: pokeapi
  type: LoadBalancer

---

# Ingress for HTTPS
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pokeapi-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - netdin.my.id  # Your domain name
    secretName: pokeapi-ssl-certificate
  rules:
  - host: netdin.my.id
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pokeapi
            port:
              number: 80
